# rpn-calculator

./: README.md  pyproject.toml  roadmap.md  todo.md
src/: main.py
src/rpn_calculator/models/: operations_list.py  responses.py  rpn_stack.py  stack_item.py
src/rpn_calculator/services/: operation_factory.py  operations.py
